# CamRawProcess

./: CMakeLists copy.txt  CMakeLists.txt  README.md  app.c  main.cpp  v4l2prtinfor.txt  结构.txt
images/: CMakeCache.txt  Makefile  cmake_install.cmake
opencv/OpencvPipeline/: OpencvPipeline.cpp  RawCvPro  cmake_install.cmake  opencvauxiliary.cpp  opencvauxiliary.h
opencv/Readrawtest/: RawImageViewer
opencv/Readrawtest copy/: CMakeLists.txt  cvreadraw.cpp  opencv.py
opencv/green/: CMakeCache.txt  CMakeLists.txt  Green  Makefile  cmake_install.cmake  greenpic.cpp
src/: CMakeLists.txt  cmake_install.cmake
src/Kernel/: CMakeLists.txt  Gammacuda.cu  Gammacuda.h
src/layer/: CMakeLists.txt
src/layer/camera/: CMakeLists.txt  a.out  v4l2_camera.cpp  v4l2_camera.h
src/layer/processing/: AWBpipeline.cpp  AWBpipeline.h  CCMpipeline.cpp  CCMpipeline.h  CMakeCache.txt  CMakeLists.txt  Gammapipeline.h  Gammapipleine.cpp  Hello  Makefile  Raw10ToRaw8pipeline.cpp  Raw10ToRaw8pipeline.h  cmake_install.cmake  rawscaler.cpp  rawscaler.h
src/utils/: Tensor.h  cuda_debug_utils.cuh
test/: CMakeCache.txt  CMakeLists.txt
test/opencvtest/: CMakeCache.txt  CMakeLists.txt  Makefile  OpencvPipeline.cpp  cmake_install.cmake  opencv.py
test/unittests/: CMakeLists.txt  CublasGemm.cu  Raw10ToRaw8Test.cu  a.out
